################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190306 Martin Raden :
 * README.md :
   + helix constraints documented
 * IntaRNA/HelixHandlerUnpaired :
   * adaptation to HelixConstraint::evalFullE() semantics
 * bin/CommandLineParsing :
   + helixFullE : replaces helixNoED
   - helixNoED : replaced by helixFullE
   * model : renamed 'L' to 'B' since only using blocks of stable helices
 * renaming Predictor*MaxHelix* to Predictor*HelixBlock*
 * IntaRNA/SeedHandler :
   + updateToNextSeed() : generic seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :
 * IntaRNA/SeedHandlerExplicit :
 * IntaRNA/SeedHandlerNoBulge :
   + updateToNextSeed() : specialized seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :
   + deleteOnDestruction : whether or not the original seedhandler is to be 
     deleted within the destructor
   * destructor() :
     + check for deleteOnDestruction
   * constructor( +deleteOnDestruction = true ) :
     + deleteOnDestruction init

190305 Martin Raden :
 * IntaRNA/PredictorMfe2d :
   * fillHybridE() : 
     + explicit initialization (formerly done via initHybridE)
     * now virtual and to be overwritten by subclasses
   - initHybridE() : obsolete
   - hybridErange : obsolete
 * IntaRNA/PredictorMfe2dSeed : runtime optimization
   + fillHybridE() : overwrites super class function and fills both matrices
     in one go to avoid recomputation of loop energies etc.
   - updateOptima() : obsolete
   - hybridErange : obsolete
   - fillHybridE_seed() : now part of fillHybridE()
 * IntaRNA/PredictorMfe2dHeuristic :
   * predict() :
     - matrix initialization now implicit in fillHybridE()
   * fillHybridE() :
     + explicit base pairing checks and field initialization
 * IntaRNA/PredictorMfe2dHeuristicSeed :